# orca-alab

./: .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  .oxlintrc.json  .prettierignore  FEATURE_WALKTHROUGH.md  NOTICE  README.md  THIRD-PARTY-NOTICES.md  electron.vite.config.ts  package.json  pnpm-lock.yaml  vite.web.config.ts
native/aterm-gpu-web/: .gitignore  Cargo.toml
native/aterm-gpu-web/src/: lib.rs
native/aterm-wasm/: .gitignore  Cargo.toml  verify-render-browser.mjs  verify-render.mjs
native/aterm-wasm/browser-proof/: aterm_wasm_bg.wasm.d.ts  index.html
native/aterm-wasm/pkg/: aterm_wasm.d.ts  aterm_wasm.js  aterm_wasm_bg.wasm
native/aterm-wasm/pkg-web/: aterm_wasm.d.ts  aterm_wasm.js  aterm_wasm_bg.wasm
native/aterm-wasm/src/: lib.rs
native/orca-node/: .gitignore  Cargo.toml  rust-toolchain.toml
native/orca-node/src/: git_executor_bridge.rs  lib.rs
rust/: Cargo.toml  PROOF_CARRYING_PERFORMANCE.md  README.md
rust/.cargo/: config.toml
rust/aterm/: Cargo.toml  LICENSE  NOTICE  VENDORED_REV.txt  deny.toml
rust/aterm/crates/aterm-agent/: Cargo.toml
rust/aterm/crates/aterm-alloc/: Cargo.toml
rust/aterm/crates/aterm-bench/: Cargo.toml
rust/aterm/crates/aterm-bidi/: Cargo.toml
rust/aterm/crates/aterm-bits/: Cargo.toml
rust/aterm/crates/aterm-buffer/: Cargo.toml
rust/aterm/crates/aterm-cap/: Cargo.toml
rust/aterm/crates/aterm-cli/: Cargo.toml
rust/aterm/crates/aterm-codec/: Cargo.toml
rust/aterm/crates/aterm-conformance/: Cargo.toml
rust/aterm/crates/aterm-containment/: Cargo.toml
rust/aterm/crates/aterm-core/: Cargo.toml
rust/aterm/crates/aterm-ctl/: Cargo.toml
rust/aterm/crates/aterm-dev/: Cargo.toml  README.md
rust/aterm/crates/aterm-error/: Cargo.toml
rust/aterm/crates/aterm-error-derive/: Cargo.toml
rust/aterm/crates/aterm-ffi/: Cargo.toml
rust/aterm/crates/aterm-ffi-types/: Cargo.toml
rust/aterm/crates/aterm-gpu/: Cargo.toml
rust/aterm/crates/aterm-gpu-web/: Cargo.toml
rust/aterm/crates/aterm-grapheme/: Cargo.toml
rust/aterm/crates/aterm-grid/: Cargo.toml
rust/aterm/crates/aterm-gui/: Cargo.toml  build.rs
rust/aterm/crates/aterm-hash/: Cargo.toml
rust/aterm/crates/aterm-log/: Cargo.toml
rust/aterm/crates/aterm-lz4/: Cargo.toml
rust/aterm/crates/aterm-nest/: Cargo.toml
rust/aterm/crates/aterm-net/: Cargo.toml
rust/aterm/crates/aterm-observe/: Cargo.toml
rust/aterm/crates/aterm-parser/: Cargo.toml
rust/aterm/crates/aterm-policy/: Cargo.toml
rust/aterm/crates/aterm-provenance/: Cargo.toml  build.rs
rust/aterm/crates/aterm-pty/: Cargo.toml
rust/aterm/crates/aterm-render/: Cargo.toml
rust/aterm/crates/aterm-render-api/: Cargo.toml
rust/aterm/crates/aterm-rle/: Cargo.toml
rust/aterm/crates/aterm-sandbox/: Cargo.toml
rust/aterm/crates/aterm-scrollback/: Cargo.toml
rust/aterm/crates/aterm-search/: Cargo.toml
rust/aterm/crates/aterm-selection/: Cargo.toml
rust/aterm/crates/aterm-session/: Cargo.toml
rust/aterm/crates/aterm-shell-integration/: Cargo.toml
rust/aterm/crates/aterm-sixel/: Cargo.toml
rust/aterm/crates/aterm-spec/: Cargo.toml
rust/aterm/crates/aterm-spec-macros/: Cargo.toml
rust/aterm/crates/aterm-spec-models/: Cargo.toml
rust/aterm/crates/aterm-tempfile/: Cargo.toml
rust/aterm/crates/aterm-types/: Cargo.toml
rust/aterm/crates/aterm-update/: Cargo.toml
rust/aterm/crates/aterm-vi/: Cargo.toml
rust/aterm/crates/aterm-wasm/: .gitignore  Cargo.toml
rust/aterm/crates/xtask/: Cargo.toml
rust/crates/orca-agents/: Cargo.toml
rust/crates/orca-agents/src/: agent_status_types.rs  commit_message_agent_spec.rs  commit_message_generation.rs  commit_message_models.rs  commit_message_plan.rs  commit_message_prompt.rs  lib.rs  pull_request_generation.rs  terminal_quick_command_json.rs  terminal_quick_commands.rs  tui_agent_config.rs  tui_agent_selection.rs  tui_agent_startup.rs  tui_agent_startup_json.rs  tui_agent_startup_shell.rs
rust/crates/orca-aterm-demo/: Cargo.toml
rust/crates/orca-aterm-demo/src/: main.rs
rust/crates/orca-config/: Cargo.toml
rust/crates/orca-config/src/: contextual_tours.rs  feature_education_telemetry.rs  feature_interactions.rs  feature_tips.rs  lib.rs  mcp.rs  pi_overlay_ui_settings.rs  project_groups.rs  repo_icon.rs  setup_script_import_codex_environment.rs  setup_script_imports.rs  setup_script_package_manager.rs  workspace_session_schema.rs  workspace_session_terminal_buffers.rs  workspace_statuses.rs
rust/crates/orca-core/: Cargo.toml
rust/crates/orca-core/src/: agent_hook_endpoint_file.rs  agent_kind.rs  agent_notification_id.rs  agent_recognition.rs  base_ref_search_result.rs  branch_name_from_work.rs  browser_grab_types.rs  browser_search.rs  browser_viewport_presets.rs  commit_message_host_key.rs  cross_platform_path.rs  execution_host.rs  feature_wall_tour_depth.rs  (+39 more)
rust/crates/orca-crash-recovery/: Cargo.toml  gpu-fallback-parity-corpus.txt  renderer-recovery-parity-corpus.txt
rust/crates/orca-crypto/: Cargo.toml
rust/crates/orca-daemon/: Cargo.toml
rust/crates/orca-dispatch/: Cargo.toml
rust/crates/orca-ffi/: Cargo.toml
rust/crates/orca-flow-control/: Cargo.toml  keep-tail-parity-corpus.txt  parity-corpus.txt
rust/crates/orca-git/: Cargo.toml
rust/crates/orca-net/: Cargo.toml
rust/crates/orca-parity/: Cargo.toml
rust/crates/orca-provider-backoff/: Cargo.toml  parity-corpus.txt
rust/crates/orca-pty/: Cargo.toml
rust/crates/orca-relay/: Cargo.toml
rust/crates/orca-renderer-heap/: Cargo.toml  parity-corpus.txt
rust/crates/orca-runtime/: Cargo.toml
rust/crates/orca-session/: Cargo.toml
rust/crates/orca-session-gc/: Cargo.toml  parity-corpus.txt
rust/crates/orca-ssh/: Cargo.toml
rust/crates/orca-store/: Cargo.toml
rust/crates/orca-stream-split/: Cargo.toml  parity-corpus.txt
rust/crates/orca-terminal/: Cargo.toml
rust/crates/orca-text/: Cargo.toml
rust/crates/orca-winpipe/: Cargo.toml
rust/orca-crypto-wasm/: Cargo.toml  rust-toolchain.toml
rust/orca-crypto-wasm/src/: lib.rs
rust/orca-git-wasm/: Cargo.toml  rust-toolchain.toml
rust/orca-git-wasm/src/: lib.rs
(+3983 files in other folders)
