[package]
name = "aterm-gpu-web"
version = "0.0.1"
edition = "2021"
description = "wasm-bindgen binding: the aterm engine (aterm-core) + the aterm-gpu WebGPU renderer (wgpu -> WebGPU on wasm32), rendering a terminal onto a <canvas> in the Electron renderer. The GPU sibling of native/aterm-wasm (which is the CPU/putImageData path)."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# aterm engine + the GPU renderer (vendored under rust/aterm). default-features =
# false drops the engine's disk-tier cold scrollback (libc mmap + zstd-sys C), which
# cannot target wasm32 — a renderer needs only the RAM/LZ4 tiers. aterm-gpu itself
# now also stops FORCING disk-tier (its deps are default-features = false), so the
# GPU crate's whole closure is wasm32-clean.
aterm-core = { path = "../../rust/aterm/crates/aterm-core", default-features = false, features = ["sixel"] }
aterm-render = { path = "../../rust/aterm/crates/aterm-render", default-features = false }
aterm-render-api = { path = "../../rust/aterm/crates/aterm-render-api", default-features = false }
aterm-gpu = { path = "../../rust/aterm/crates/aterm-gpu" }

# wgpu's WebGPU backend on wasm32 (the browser GPU API behind Chromium/Electron 42).
# default-features = false drops the native backends (metal/vulkan/dx12/gles); the
# wasm closure pulls only the WebGPU path via wasm-bindgen/web-sys. fragile-send-
# sync-non-atomic-wasm lets the !Send WebGPU handles satisfy wgpu's Send/Sync bounds
# on the single-threaded browser main thread.
wgpu = { version = "29", default-features = false, features = ["webgpu", "wgsl", "fragile-send-sync-non-atomic-wasm"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# wgpu 29 requires wasm-bindgen >= 0.2.108; pin it exact so the generated glue
# matches the wasm-bindgen CLI version (a mismatch makes `wasm-bindgen --target web`
# refuse). aterm-wasm pins 0.2.100 separately — these two crates build independently.
wasm-bindgen = "=0.2.108"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
# The browser DOM types the WebGPU init path needs: the <canvas> handed in from JS,
# and (TODO, present loop) the window/raf bindings. wgpu's `webgpu` feature already
# enables HtmlCanvasElement; declared here too so this crate's own code can name it.
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "Window", "Document"] }
js-sys = "0.3"
# Transitive deps may pull getrandom; on wasm32-unknown-unknown it needs the JS
# backend. Harmless if unused.
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
