[package]
name = "orca-node"
version = "0.0.1"
edition = "2021"
description = "Node-API addon exposing the aterm-backed orca-terminal HeadlessTerminal to Electron — the real JS->napi->aterm drop-in path, for measuring the marshalling cost."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
orca-terminal = { path = "../../rust/crates/orca-terminal" }
# orca-git: the verified status/numstat/line-count parsers exposed to JS via this
# same .node. orca-core supplies the C-quoted-path decoder.
orca-git = { path = "../../rust/crates/orca-git" }
orca-core = { path = "../../rust/crates/orca-core" }
# orca-net: the byte-budget NDJSON line splitter (daemon-socket OOM guard) exposed as
# the NdjsonParser napi class.
orca-net = { path = "../../rust/crates/orca-net" }
# futures-executor: block_on for the IO-tier "A bridge" — a libuv worker thread
# awaits the JS git executor's promise while the JS main thread keeps turning.
futures-executor = { version = "0.3", default-features = false }

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
