[package]
name = "orca-node"
version = "0.0.1"
edition = "2021"
description = "Node-API addon exposing the aterm-backed orca-terminal HeadlessTerminal to Electron — the real JS->napi->aterm drop-in path, for measuring the marshalling cost."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi8"] }
napi-derive = "3"
orca-terminal = { path = "../../rust/crates/orca-terminal" }
# orca-git: the verified status/numstat/line-count parsers exposed to JS via this
# same .node. orca-core supplies the C-quoted-path decoder; orca-text the
# remote-error normaliser + pi-agent-kind + skill-metadata text logic.
orca-git = { path = "../../rust/crates/orca-git" }
orca-core = { path = "../../rust/crates/orca-core" }
orca-text = { path = "../../rust/crates/orca-text" }
# orca-agents: the commit-message spawn planner (agent choice + prompt -> binary
# + argv + stdin) the local generator and SSH provider drive via this addon.
orca-agents = { path = "../../rust/crates/orca-agents" }
# orca-config: the workspace-session schema parse/repair persistence.ts relies on
# (the shared zod twin was deleted; the Rust port is the sole impl).
orca-config = { path = "../../rust/crates/orca-config" }
# orca-ssh: the OpenSSH config parser (~/.ssh/config -> hosts) the SSH target
# import relies on (the shared TS parseSshConfig twin was deleted).
orca-ssh = { path = "../../rust/crates/orca-ssh" }
# orca-runtime: the multi-agent orchestration store (messages/tasks/dispatch/
# gates), exposed as the stateful OrchestrationStore napi class the main-process
# OrchestrationDb shim delegates to (the TS SQLite twin was deleted).
orca-runtime = { path = "../../rust/crates/orca-runtime" }
# serde_json: builds the JSON marshalling for the orca-text summaries.
serde_json = { version = "1", features = ["preserve_order"] }
# serde: the Serialize bound for row_json — marshals orca-runtime store rows to
# the TS Row JSON the OrchestrationStore shim reads.
serde = { version = "1", default-features = false }
# orca-net: the byte-budget NDJSON line splitter (daemon-socket OOM guard) exposed as
# the NdjsonParser napi class.
orca-net = { path = "../../rust/crates/orca-net" }
# orca-dispatch: the aggregate per-module dispatch registry, exposed as the single
# `orcaDispatch` op so any ported pure module ships via a TS wrapper (no per-module napi).
orca-dispatch = { path = "../../rust/crates/orca-dispatch" }
# futures-executor: block_on for the IO-tier "A bridge" — a libuv worker thread
# awaits the JS git executor's promise while the JS main thread keeps turning.
futures-executor = { version = "0.3", default-features = false }

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
