# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 The aterm Authors

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/andrewyatesai/aterm"
authors = ["The aterm Authors"]
description = "aterm — a fast, hardened terminal engine"

[workspace.dependencies]
# --- external (pinned; present in local cargo cache for offline builds) ---
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2", features = ["full", "extra-traits"] }
proptest = "1"   # dev-dep: property tests in foundation crates
serde = { version = "1", features = ["derive"] }   # optional feature in aterm-types
serde_json = "1"   # aterm-update only: parse the GitHub Releases API response
zstd = "0.13"    # aterm-scrollback warm-tier compression
libc = "0.2"     # aterm-scrollback mmap/disk tier
toml = "0.8"
regex = "1"
# Distributed-slice collection across crates: the #[refines]/#[spec_unmodeled]
# anchor emitters submit RefinementEntry/Waiver records into an inventory slice
# that the spec_xref_closure gate collects at test time (TRUST_NATIVE_TLA, Phase 0).
inventory = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
winit = "0.30"   # aterm-gui windowing; aterm-types winit-keymap feature reuses its key enums
# Drop-in std::time replacement: EXACTLY `std::time` on native (zero-cost, byte-identical),
# JS clock on wasm32 — lets the engine's internal Instant/SystemTime reads run under wasm
# instead of panicking "time not implemented".
web-time = "1"

# --- internal aterm crates (added by tools/port_crate.sh as each is ported) ---
aterm-render-api = { path = "crates/aterm-render-api" }
# L0.5 semantic surface predicates (regex row-match) over the Observation Kernel.
aterm-observe = { path = "crates/aterm-observe" }
# L2 agent interface: turn-completion + self-reflection governor over L0/L0.5/L1.
aterm-agent = { path = "crates/aterm-agent" }
# L3 network transport: relay the control protocol over a network boundary with a
# channel-bound capability (drive a remote aterm; predicates run on its surface).
aterm-net = { path = "crates/aterm-net" }
aterm-pty = { path = "crates/aterm-pty" }
aterm-session = { path = "crates/aterm-session" }
aterm-cap = { path = "crates/aterm-cap" }
aterm-ffi = { path = "crates/aterm-ffi" }
aterm-sandbox = { path = "crates/aterm-sandbox" }
aterm-render = { path = "crates/aterm-render" }
aterm-gpu = { path = "crates/aterm-gpu" }
aterm-core = { path = "crates/aterm-core" }
aterm-shell-integration = { path = "crates/aterm-shell-integration" }
aterm-search = { path = "crates/aterm-search" }
aterm-selection = { path = "crates/aterm-selection" }
aterm-policy = { path = "crates/aterm-policy" }
aterm-vi = { path = "crates/aterm-vi" }
aterm-containment = { path = "crates/aterm-containment" }
aterm-ffi-types = { path = "crates/aterm-ffi-types" }
aterm-grid = { path = "crates/aterm-grid" }
aterm-scrollback = { path = "crates/aterm-scrollback" }
aterm-parser = { path = "crates/aterm-parser" }
aterm-grapheme = { path = "crates/aterm-grapheme" }
aterm-types = { path = "crates/aterm-types" }
aterm-spec = { path = "crates/aterm-spec" }
aterm-spec-macros = { path = "crates/aterm-spec-macros" }
aterm-spec-models = { path = "crates/aterm-spec-models" }
aterm-provenance = { path = "crates/aterm-provenance" }
aterm-error = { path = "crates/aterm-error" }
aterm-error-derive = { path = "crates/aterm-error-derive" }
aterm-tempfile = { path = "crates/aterm-tempfile" }
aterm-bidi = { path = "crates/aterm-bidi" }
aterm-lz4 = { path = "crates/aterm-lz4" }
aterm-rle = { path = "crates/aterm-rle" }
aterm-codec = { path = "crates/aterm-codec" }
aterm-bits = { path = "crates/aterm-bits" }
aterm-hash = { path = "crates/aterm-hash" }
aterm-log = { path = "crates/aterm-log" }
aterm-alloc = { path = "crates/aterm-alloc" }
aterm-update = { path = "crates/aterm-update" }
aterm-sixel = { path = "crates/aterm-sixel" }
# (none yet — populated bottom-up)

# --- workspace-wide lint policy (inherited via `[lints] workspace = true`) ---
# One central ratchet for every crate. The whole tree is kept clean under
# `cargo clippy --workspace --all-targets -- -D warnings` (tools/verify.sh runs it);
# there is no CI, so this local gate IS the contract.
[workspace.lints.rust]
# Edition 2024 already warns here; deny it workspace-wide so an unsafe op outside an
# explicit `unsafe {}` inside an `unsafe fn` can never sneak in.
unsafe_op_in_unsafe_fn = "deny"
# Centralized known-cfg superset (was declared per-crate). Verification/fuzzing
# tools gate code behind these cfgs (kani proofs, loom interleavings, miri, fuzz
# harnesses; `aterm_ffi_catch_unwind!` also expands a `#[cfg(kani)]` arm). Declaring
# the union here keeps `unexpected_cfgs` honest in every crate from one place — an
# undeclared cfg name still warns; an unused-but-declared one is harmless.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)', 'cfg(loom)', 'cfg(miri)', 'cfg(fuzzing)', 'cfg(trust_verify)'] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
# Aggressive size+speed, functionality-preserving: fat LTO (whole-program
# optimization across crates → smaller + often faster) + strip symbols. NOT
# panic="abort" — aterm relies on catch_unwind for FFI-boundary panic isolation
# (aterm_ffi_catch_unwind!), which abort would break.
#
# opt-level is left at the default 3 BY DELIBERATE OWNER DECISION (2026-06-14):
# opt-level="s" was measured to shrink aterm-gui 6.74 → 5.48 MB (-18.7%) but cost
# -12.5% flood throughput (166 → 146 MiB/s). aterm stays #1 of 5 on BOTH axes either
# way (next-smallest competitor 13.3 MB; next-fastest 102 MiB/s), so the owner kept
# the throughput crown — the binary already crushes every competitor on size. Do
# not switch to "s"/"z" without re-confirming this tradeoff is wanted.
lto = true
codegen-units = 1
strip = true

# The web-render frontends ship as browser download assets, so size beats
# throughput for them: build ONLY these two for size (opt-level="z"). The engine
# profile above (opt-level 3, owner's throughput decision) is untouched. orc's
# build-aterm-wasm.mjs compiles these to wasm32 and wasm-opt's the result.
[profile.release.package.aterm-wasm]
opt-level = "z"

[profile.release.package.aterm-gpu-web]
opt-level = "z"

# Same codegen as release but keeps symbols, for sampling profilers (sample/samply):
#   cargo build --profile profiling -p aterm-gui
[profile.profiling]
inherits = "release"
strip = false
debug = 1
