[package]
name = "orca-agents"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent-CLI domain for Orca: commit-message prompt/plan building, provider specs, error extraction. Pure logic over vendored regex + serde_json."

[dependencies]
# Stripped: regex for the clean/extract heuristics, serde_json for parsing the
# JSON error payloads agent CLIs emit.
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-case", "unicode-perl"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

[lints.rust]
unsafe_code = "forbid"
# `trust_verify` is set only when verifying under the Trust compiler; declaring
# it keeps stock-cargo builds free of unexpected-cfg warnings. See
# docs/rust-migration/trust-verification.md.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(trust_verify)'] }
